# local-infra

./: .cz.toml  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  Makefile  README.md  compose.yaml  compose.yml  example.env  pyproject.toml
config/: milvus.example.yaml  temporal.yaml
config/nginx/: nginx.conf
config/nginx/conf.d/: 00-default.conf  _upstream.example.conf  grpc.example.conf  upload.example.conf  websocket.example.conf
config/nginx/examples/: grpc.conf  http.conf  redirect-https.conf  sse.conf  upload.conf  upstream.conf
config/nginx/snippets/: grpc-params.conf  sse-params.conf  ssl.example.conf  upload-params.conf  ws-upgrade.conf
docker/: compose.datastore.yaml  compose.meilisearch.yaml  compose.milvus.yaml  compose.nginx.yaml  compose.observability.yaml  compose.ollama.yaml  compose.temporal.yaml
scripts/: auto-renew.sh  cert-issue.sh
